Fix line wrap on games

--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ hr.rounded {
     color: #fff;
     font-weight: 600;
     font-size: 25px;
-    width: calc(100% - 20px);
+    width: calc(100% - 40px);
     position: absolute;
 }
 .topdetails .game-optionbuttons{
